--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@
 # koneksi nya dpt di lihat di bawah
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#mongodb
 DATABASE_URL="mongodb+srv://root:<password>@cluster0.ab1cd.mongodb.net/myDatabase?retryWrites=true&w=majority"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
