function login & social login

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@
 DATABASE_URL="mongodb+srv://root:<password>@cluster0.ab1cd.mongodb.net/myDatabase?retryWrites=true&w=majority"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=<INPUT YOUR KEY>
+GITHUB_SECRET=<INPUT YOUR KEY>
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=<INPUT YOUR KEY>
+GOOGLE_CLIENT_SECRET=<INPUT YOUR KEY>
