Create Message & Image Upload

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ GITHUB_SECRET=<INPUT YOUR KEY>
 
 GOOGLE_CLIENT_ID=<INPUT YOUR KEY>
 GOOGLE_CLIENT_SECRET=<INPUT YOUR KEY>
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=<INPUT YOUR KEY>
