update realtime message with pusher

--- a/.env
+++ b/.env
@@ -16,3 +16,8 @@ GOOGLE_CLIENT_ID=<INPUT YOUR KEY>
 GOOGLE_CLIENT_SECRET=<INPUT YOUR KEY>
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=<INPUT YOUR KEY>
+
+NEXT_PUBLIC_PUSHER_APP_KEY = <INPUT YOUR KEY>
+PUSHER_APP_ID = <INPUT YOUR KEY>
+PUSHER_SECRET = <INPUT YOUR KEY>
+PUSHER_CLUSTER = <INPUT YOUR KEY>
