--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "bcrypt": "^5.1.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
+    "lodash": "^4.17.21",
     "next": "13.4.11",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.16.3",
     "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.27",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.196",
     "prisma": "^5.0.0"
   }
 }
