update information & personal key

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ GOOGLE_CLIENT_ID=<INPUT YOUR KEY>
 GOOGLE_CLIENT_SECRET=<INPUT YOUR KEY>
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=<INPUT YOUR KEY>
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=<INPUT YOUR KEY>
 
 NEXT_PUBLIC_PUSHER_APP_KEY = <INPUT YOUR KEY>
 PUSHER_APP_ID = <INPUT YOUR KEY>
